<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.mah.af2015.p2.WeatherActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/sensor_readings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:id="@+id/sensor_readings"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="15dp"
                android:layout_alignParentLeft="true"
                android:textStyle="normal|bold" />

            <TextView
                android:text="@string/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:id="@+id/sensor_temperature"
                android:layout_alignParentStart="true"
                android:layout_below="@id/sensor_readings"
                android:layout_marginLeft="15dp"
                android:layout_alignParentLeft="true"
                android:drawableStart="@drawable/ic_temperature"
                android:drawableLeft="@drawable/ic_temperature"
                android:gravity="center" />

            <TextView
                android:text="@string/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:id="@+id/sensor_humidity"
                android:layout_alignParentStart="true"
                android:layout_below="@id/sensor_temperature"
                android:layout_marginLeft="15dp"
                android:layout_alignParentLeft="true"
                android:drawableStart="@drawable/ic_humidity"
                android:drawableLeft="@drawable/ic_humidity"
                android:gravity="center"/>

            <TextView
                android:text="@string/pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:id="@+id/sensor_pressure"
                android:layout_alignParentStart="true"
                android:layout_below="@id/sensor_humidity"
                android:layout_marginLeft="15dp"
                android:layout_alignParentLeft="true"
                android:drawableStart="@drawable/ic_pressure"
                android:drawableLeft="@drawable/ic_pressure"
                android:gravity="center" />

            <TextView
                android:text="@string/timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:id="@+id/sensor_timestamp"
                android:layout_alignParentStart="true"
                android:layout_below="@id/sensor_pressure"
                android:layout_marginLeft="15dp"
                android:layout_alignParentLeft="true"
                android:textStyle="normal|bold" />

            <View
                android:id="@+id/sensor_horizontal_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_below="@id/sensor_timestamp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:text="@string/api_readings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:id="@+id/api_readings"
                android:layout_below="@id/sensor_horizontal_line"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="15dp"
                android:layout_alignParentLeft="true"
                android:textStyle="normal|bold" />

            <TextView
                android:text="@string/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:id="@+id/api_temperature"
                android:layout_alignParentStart="true"
                android:layout_below="@id/api_readings"
                android:layout_marginLeft="15dp"
                android:layout_alignParentLeft="true"
                android:drawableStart="@drawable/ic_temperature"
                android:drawableLeft="@drawable/ic_temperature"
                android:gravity="center" />

            <TextView
                android:text="@string/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:id="@+id/api_humidity"
                android:layout_alignParentStart="true"
                android:layout_below="@id/api_temperature"
                android:layout_marginLeft="15dp"
                android:layout_alignParentLeft="true"
                android:drawableStart="@drawable/ic_humidity"
                android:drawableLeft="@drawable/ic_humidity"
                android:gravity="center" />

            <TextView
                android:text="@string/pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:id="@+id/api_pressure"
                android:layout_alignParentStart="true"
                android:layout_below="@id/api_humidity"
                android:layout_marginLeft="15dp"
                android:layout_alignParentLeft="true"
                android:drawableStart="@drawable/ic_pressure"
                android:drawableLeft="@drawable/ic_pressure"
                android:gravity="center" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignTop="@+id/api_readings"
                android:id="@+id/radio_group"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp">

                <RadioButton
                    android:text="@string/use_async"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/use_async"
                    android:layout_weight="1"
                    android:checked="true" />

                <RadioButton
                    android:text="@string/use_volley"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/use_volley"
                    android:layout_weight="1" />
            </RadioGroup>

            <TextView
                android:text="@string/current_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/api_current_city"
                android:layout_below="@+id/api_pressure"
                android:layout_alignLeft="@+id/api_pressure"
                android:layout_alignStart="@+id/api_pressure"
                android:layout_marginTop="10dp"
                android:textStyle="normal|bold" />

            <Button
                android:text="@string/request_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/radio_group"
                android:layout_alignRight="@+id/radio_group"
                android:layout_alignEnd="@+id/radio_group"
                android:id="@+id/request_data" />

            <View
                android:id="@+id/api_horizontal_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_below="@id/api_current_city"
                android:layout_marginTop="10dp"/>

            <TextView
                android:text="@string/combined_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:id="@+id/combined_data"
                android:textStyle="normal|bold"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/api_horizontal_line"
                android:layout_alignLeft="@+id/api_current_city"
                android:layout_alignStart="@+id/api_current_city" />

            <TextView
                android:text="@string/info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/info"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/combined_data"
                android:layout_alignLeft="@+id/combined_data"
                android:layout_alignStart="@+id/combined_data"
                android:textStyle="normal|italic"
                android:layout_alignRight="@+id/request_data"
                android:layout_alignEnd="@+id/request_data" />

            <TextView
                android:text="@string/estimated_altitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/estimated_altitude"
                android:layout_below="@+id/info"
                android:layout_marginTop="5dp"
                android:layout_alignLeft="@+id/info"
                android:layout_alignStart="@+id/info"
                android:layout_alignRight="@+id/info"
                android:layout_alignEnd="@+id/info"
                android:textStyle="normal|bold" />

            <Button
                android:text="@string/estimate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/estimated_altitude"
                android:layout_alignLeft="@+id/estimated_altitude"
                android:layout_alignStart="@+id/estimated_altitude"
                android:id="@+id/estimate_altitude"
                android:layout_marginTop="5dp"
                android:layout_alignRight="@+id/request_data"
                android:layout_alignEnd="@+id/request_data" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
